--- a/test-note-book/css/main.css
+++ b/test-note-book/css/main.css
@@ -57,6 +57,11 @@ input {
     box-shadow: 0 2px 3px rgba(0, 0, 0, .1);
 }
 
+.task-title-error {
+    padding-left: 10px;
+    text-align: left;
+    color: red;
+}
 .wrap {
     max-width: 500px;
     margin: 0 auto 30px;
